static files in production

--- a/prod_docker-compose.yml
+++ b/prod_docker-compose.yml
@@ -14,5 +14,10 @@ services:
     build: ./nginx
     ports:
       - 80:80
+    volumes:
+      - static_volume:/home/app/web/staticfiles
     depends_on:
       - web
+
+volumes:
+  static_volume:
