--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -19,6 +19,7 @@ RUN mkdir -p /home/app
 ENV HOME=/home/app
 ENV APP_HOME=/home/app/web
 RUN mkdir $APP_HOME
+RUN mkdir $APP_HOME/staticfiles
 WORKDIR $APP_HOME
 
 COPY --from=builder /usr/src/app/wheels /wheels
