--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,10 +3,11 @@ upstream portfolio {
 }
 
 server {
+    
     listen 80;
 
     location / {
-        proxy_pass http://pawel-stawikowski.pl;
+        proxy_pass http://portfolio;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
