--- a/prod_docker-compose.yml
+++ b/prod_docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - 8000
     env_file:
       - ./prod.env
+    volumes:
+      - static_volume:/home/app/web/staticfiles
   nginx:
     build: ./nginx
     ports:
