--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -5,7 +5,7 @@ WORKDIR /usr/src/app
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
-RUN apk update && apk add gcc python3-dev
+RUN apk update && apk add postgresql-dev gcc python3-dev musl-dev
 
 RUN pip install --upgrade pip
 COPY . .
@@ -26,4 +26,10 @@ COPY --from=builder /usr/src/app/wheels /wheels
 COPY --from=builder /usr/src/app/requirements.txt .
 RUN pip install --no-cache /wheels/*
 
+COPY ./entrypoint.sh .
+RUN sed -i 's/\r$//g'  $APP_HOME/entrypoint.sh
+RUN chmod +x  $APP_HOME/entrypoint.sh
+
 COPY . $APP_HOME
+
+ENTRYPOINT [ "/usr/src/app/entrypoint.sh" ]
