--- a/prod_docker-compose.yml
+++ b/prod_docker-compose.yml
@@ -12,6 +12,15 @@ services:
       - ./prod.env
     volumes:
       - static_volume:/home/app/web/staticfiles
+      - media_volume:/home/app/web/mediafiles
+    depends_on:
+      - db
+  db:
+    image: postgres:15.0-alpine
+    volumes:
+      - postgres_data:/var/lib/postgresql/postgres_data
+    env_file:
+      - ./.db.env
   nginx:
     build: ./nginx
     ports:
@@ -22,4 +31,6 @@ services:
       - web
 
 volumes:
+  postgres_data:
   static_volume:
+  media_volume:
