--- a/prod_docker-compose.yml
+++ b/prod_docker-compose.yml
@@ -21,6 +21,8 @@ services:
       - postgres_data:/var/lib/postgresql/postgres_data
     env_file:
       - ./.db.env
+    expose:
+      - 5433
   nginx:
     build: ./nginx
     ports:
