--- a/prod_docker-compose.yml
+++ b/prod_docker-compose.yml
@@ -36,3 +36,9 @@ volumes:
   postgres_data:
   static_volume:
   media_volume:
+
+
+networks:
+  default:
+    name: nginx-proxy
+    external: true
