--- a/prod_docker-compose.yml
+++ b/prod_docker-compose.yml
@@ -23,6 +23,8 @@ services:
       - ./.db.env
     expose:
       - 5433
+    command:
+      - '-p 5433'
   nginx:
     build: ./nginx
     expose:
