--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,25 @@
 version: "3.8"
 
 services:
-  web:
-    build: .
-    command: python manage.py runserver 0.0.0.0:8000
+  portfolio-web:
+    build:
+      dockerfile: Dockerfile
+      context: .
+    command: python manage.py runserver 0.0.0.0:8005
     volumes:
       - ./:/usr/src/app
     ports:
-      - 8000:8000
+      - 8005:8005
     env_file:
       - ./.env
     depends_on:
-      - db
-  db:
+      - portfolio-db
+  portfolio-db:
     image: postgres:15.0-alpine
     volumes:
-      - postgres_data:/var/lib/postgresql/postgres_data
+      - portfolio_postgres_data:/var/lib/postgresql/postgres_data
     env_file:
       - ./.db.env
-    expose:
-      - "5433"
-    command:
-      - "-p 5433"
 
 volumes:
-  postgres_data:
+  portfolio_postgres_data:
